# optimizationStraits

./: .gitignore  NAMING.md  README.md  pyproject.toml
api/: main.py
calibration/: README.md  __init__.py  episodes.py  run.py
data/: README.md  basins.csv  bilateral_flows_2023.csv  coastlines.csv  countries.csv  straits.csv
notebooks/: 01_explore.ipynb
scripts/: fetch_comtrade.py
src/opencrude/: __init__.py  graph.py  market.py  resilience.py
src/straitgraph/: __init__.py  bilateral.py  demo.py  graph.py  market.py  resilience.py
tests/: test_market.py
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  Map.tsx  ResultsPanel.tsx  ScenarioPanel.tsx  api.ts  index.css  scenarios.ts  straitPaths.ts  types.ts
