    [build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "straitgraph"
version = "0.1.0"
description = "Graph-theoretic analysis of maritime straits and global trade markets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.2",
    "numpy>=1.26",
    "scipy>=1.11",
    "cvxpy>=1.4",
    "pandas>=2.1",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "jupyter>=1.0", "ipykernel>=6.29"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "pydantic>=2.6"]

[tool.setuptools.packages.find]
where = ["src"]
