    [build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opencrude"
version = "0.2.0"
description = "OpenCrude — open-source what-if simulator for the transport-cost component of crude oil prices over the world's maritime chokepoints"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.2",
    "numpy>=1.26",
    "scipy>=1.11",
    "cvxpy>=1.4",
    "pandas>=2.1",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "jupyter>=1.0", "ipykernel>=6.29"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "pydantic>=2.6"]

[tool.setuptools.packages.find]
where = ["src"]
